--- a/SpringMVC/src/main/resources/hibernate.properties
+++ b/SpringMVC/src/main/resources/hibernate.properties
@@ -8,9 +8,9 @@ hibernate.jdbc.batch_size=0
 hibernate.generate_statistics=true
 #e.g. validate | update | create | create-drop
 hibernate.hbm2ddl.auto=create-drop
-database.url=jdbc:postgresql://localhost/fincasmorosas
-database.userName=postgres
-database.password=openxava
+database.url=jdbc:postgresql://localhost/your-db-name
+database.userName=user-db
+database.password=pass-db
 database.driverClassName=org.postgresql.Driver
 DatabaseModule.Transactional.value.default=commit
 #DbUnitModule.DataSet.loadStrategy.default=org.unitils.dbunit.datasetloadstrategy.InsertLoadStrategy
