--- a/SpringMVC/src/main/resources/mail.properties
+++ b/SpringMVC/src/main/resources/mail.properties
@@ -1,4 +1,5 @@
 #fichero properties para el envio de mails desde la tienda. Hay que crear un usuario gmail!!!
+properties file in order to send emails to emailTo from userMail. google email engine involved
 userMail = USER@gmail.com
 passMail = PASS
 emailTo = user-to@gmail.com
