--- a/SpringMVC/src/main/resources/hibernate.properties
+++ b/SpringMVC/src/main/resources/hibernate.properties
@@ -9,12 +9,12 @@ hibernate.generate_statistics=true
 #e.g. validate | update | create | create-drop
 hibernate.hbm2ddl.auto=validate
 database.url=jdbc:postgresql://localhost/fincasmorosas
-# redcoruna
-#database.userName=userfincas
-#database.password=nK0k297sCBDO
+# other
+#database.userName=user
+#database.password=pass
 # local
-database.userName=postgres
-database.password=openxava
+database.userName=user
+database.password=pass
 
 database.driverClassName=org.postgresql.Driver
 DatabaseModule.Transactional.value.default=commit
