--- a/SpringMVC/src/main/resources/mail.properties
+++ b/SpringMVC/src/main/resources/mail.properties
@@ -1,4 +1,4 @@
 #fichero properties para el envio de mails desde la tienda. Hay que crear un usuario gmail!!!
-userMail = alonsoir@gmail.com
-passMail = auz77dbt
-emailTo = jocalons@gmail.com
+userMail = userMail@gmail.com
+passMail = passMail
+emailTo = emailTo@gmail.com
