--- a/SpringMVC/pom.xml
+++ b/SpringMVC/pom.xml
@@ -47,7 +47,7 @@
 			<groupId>javax.jms</groupId>
 			<artifactId>jms</artifactId>
 			<version>1.1</version>
-			<type>jar</type>
+			<type>pom</type>
 		</dependency>
 
 		<dependency>
